--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,23 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
+            <!-- DEEP LINK - wywołanie aplikacji przez URL -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                
+                <!-- Custom scheme: joinco://scan -->
+                <data android:scheme="joinco" 
+                      android:host="scan" />
+            </intent-filter>
+            
         </activity>
     </application>
 
