--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait">
             
             <intent-filter>
@@ -24,15 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             
-            <!-- DEEP LINK - wywołanie aplikacji przez URL -->
-            <intent-filter android:autoVerify="true">
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                
-                <!-- Custom scheme: joinco://scan -->
-                <data android:scheme="joinco" 
-                      android:host="scan" />
+                <data android:scheme="joinco" />
             </intent-filter>
             
         </activity>
