--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Extract SHA-256 Fingerprint
       run: |
         echo "=== SHA-256 Certificate Fingerprint ==="
-        keytool -list -printcert -jarfile app/build/outputs/apk/debug/app-debug.apk | grep SHA256
+        unzip -q -c app/build/outputs/apk/debug/app-debug.apk META-INF/CERT.RSA | keytool -printcert | grep SHA256
         echo "======================================="
         echo "Copy this fingerprint for assetlinks.json"
       
